apply golangci-lint; add menu route
