# internal/plutonium/api/v1/handlers/frontendApi/handlers.go
@@ -1,15 +1,61 @@
 package frontendapi
 
 import (
+	"errors"
+	"net/http"
+	"strings"
+
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/ole-larsen/plutonium/internal/plutonium"
 	"github.com/ole-larsen/plutonium/models"
 	"github.com/ole-larsen/plutonium/restapi/operations/frontend"
 )
 
-func GetHeaderHandler(_ frontend.GetFrontendHeaderParams, _ *models.Principal) middleware.Responder {
-	return frontend.NewGetFrontendHeaderOK().WithPayload(nil)
+type API struct {
+	service *plutonium.Server
 }
 
-func GetFooterHandler(_ frontend.GetFrontendFooterParams, _ *models.Principal) middleware.Responder {
-	return frontend.NewGetFrontendFooterOK().WithPayload(nil)
+func NewFrontendAPI(s *plutonium.Server) *API {
+	return &API{service: s}
+}
+
+func (a *API) GetMenuHandler(params frontend.GetFrontendMenuParams, _ *models.Principal) middleware.Responder {
+	if params.Provider == nil {
+		return frontend.NewGetFrontendMenuBadRequest().WithPayload(&models.ErrorResponse{
+			Code:    http.StatusBadRequest,
+			Message: "provider is required",
+		})
+	}
+
+	menu, err := a.service.GetStorage().GetMenusRepository().GetMenuByProvider(*params.Provider)
+	if err != nil {
+		if strings.Contains(err.Error(), MenuNotFound) {
+			return frontend.NewGetFrontendMenuNotFound().WithPayload(&models.ErrorResponse{
+				Code:    http.StatusNotFound,
+				Message: "[" + *params.Provider + "] " + MenuNotFound,
+			})
+		}
+
+		a.service.GetLogger().Error(err.Error())
+
+		return frontend.NewGetFrontendMenuInternalServerError().WithPayload(&models.ErrorResponse{
+			Code:    http.StatusInternalServerError,
+			Message: SomethingsWentWrong,
+		})
+	}
+
+	payload := &models.PublicMenuResponse{
+		Menu: menu,
+	}
+
+	return frontend.NewGetFrontendMenuOK().WithPayload(payload)
+}
+
+func (a *API) XTokenAuth(token string) (*models.Principal, error) {
+	if token == a.service.GetSettings().XToken {
+		principal := models.Principal(token)
+		return &principal, nil
+	}
+
+	return nil, errors.New("incorrect api key authApi")
 }
